# graphipedia

./: .gitignore  .mise.toml  docker-compose.yml
.deploy/nginx/: Dockerfile  nginx.conf
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/openapi/: api.yaml
backend/src/: lib.rs
backend/src/api/: graph.rs  mod.rs  search.rs  state.rs  titles_binary_search.rs
backend/src/graph/: bidirectional_zero_one_bfs.rs  graph.rs  graph_search.rs  mod.rs  node.rs
backend/src/title_search/: mod.rs  title_search.rs
backend/src/wikipedia_page_scraper/: mod.rs  page.rs  scraper.rs
backend/src/wikipedia_xml_parser/: mod.rs  page.rs  parser.rs
frontend/: index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/app/: ClientComponent.tsx  layout.tsx  page.tsx
frontend/src/client/components/: App.tsx  Graph.tsx  Layout.tsx  RawGraph.tsx  TitleSearchField.tsx  WikipediaGraph.tsx
frontend/src/client/hooks/: useSearchGraphResult.ts  useSearchPageResult.ts  useTracking.ts
frontend/src/client/pages/: Home.tsx  Snapshot.tsx
frontend/src/client/routes/: index.tsx
frontend/src/components/: Graphipedia.tsx  TitleSearchField.tsx
frontend/src/lib/: fetchGraphSearch.ts  fetchTitleSearch.ts
frontend/src/shared/types/: search_graph.ts  search_page.ts
frontend/types/: api-types.ts
server/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
server/src/: index.tsx
server/src/views/: Page.tsx
